# EGO

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  LICENCE.md  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  health-check.yml
.husky/: commit-msg  pre-commit  pre-push
backend/go-api/: .dockerignore  .golangci.yml  Dockerfile.dev  Dockerfile.prod  go.mod  go.sum
backend/go-api/migrations/: 0000012_create_maintenance_mode_table.down.sql  0000012_create_maintenance_mode_table.up.sql  000001_init_schema.down.sql  000001_init_schema.up.sql  000002_vectors.down.sql  000002_vectors.up.sql  000003_pgvector.down.sql  000003_pgvector.up.sql  000004_message_embeddings_unique.down.sql  000004_message_embeddings_unique.up.sql  000005_add_user_llm_settings.down.sql  000005_add_user_llm_settings.up.sql  (+20 more)
backend/python-api/: .dockerignore  .gitignore  .ruff.toml  Dockerfile.dev  Dockerfile.prod  Dockerfile.sandbox  main.py  nginx.conf.erb  pyproject.toml  requirements-dev.txt  requirements.txt
backend/python-api/core/: agent.py  llm_backend.py  memory_db.py  prompts.py  tools.py
backend/python-api/utils/: logger.py
frontend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  eslint.config.js  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts  service-worker.d.ts  service-worker.ts  vite-env.d.ts
frontend/static/: manifest.json
scripts/: check-changed.sh  setup-hooks.sh
(+147 files in other folders)
